<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/material_blue_500"
    android:padding="10dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="5dp"
        android:background="@android:drawable/stat_notify_error"
        android:visibility="visible"
        android:contentDescription="@string/todo"
        android:layout_marginEnd="5dp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/image"
        android:text="@string/look_like_you_are_offline_n_for_better_experience_use_application_online"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/image" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/green_g_plus_button"
        android:text="@string/ok_got_it"
        android:textColor="#FFF"
        android:textSize="20sp" />

</RelativeLayout>