<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_blue_500">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/htab_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/developer_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="Layth Al-Zamili"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/email_developer_"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="laithalzamely@gmail.com"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/site_dev"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/pay_source_head"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/personal_website_"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="https://github.com/LaythAl-Zamili"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/contact_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/contact_number"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="00420737243088"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/lab_locations"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="Czech Republic"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/Application_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="Sibiřská 1103/64, Brno-Řečkovice a Mokrá Hora"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/white" />
    </LinearLayout>

</ScrollView>